# ESP32-S3-Monitoring

./: .gitignore  README.md
firmware/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.mondash
firmware/boards/: hosyond_es3c28p.json
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/main/data/: data_store.c  data_store.h  json_parser.c  json_parser.h
firmware/main/hal/: display_hal.c  display_hal.h  led_hal.c  led_hal.h  touch_hal.c  touch_hal.h
firmware/main/net/: wifi_manager.c  wifi_manager.h  ws_client.c  ws_client.h
firmware/main/ui/: ui_manager.c  ui_manager.h  ui_theme.c  ui_theme.h
firmware/main/ui/pages/: page_cameras.c  page_cameras.h  page_chart.c  page_chart.h  page_network.c  page_network.h  page_overview.c  page_overview.h  page_websites.c  page_websites.h
firmware/main/ui/widgets/: status_card.c  status_card.h  status_row.c  status_row.h
server/: pyproject.toml
server/app/: config.py  database.py  main.py  scheduler.py
server/app/api/: display.py  history.py  monitors.py  system.py
server/app/collectors/: base.py  http_collector.py  rtsp_collector.py  snmp_collector.py
server/app/services/: data_service.py  display_service.py  thumbnail_service.py
server/app/streaming/: mjpeg_proxy.py
server/app/ws/: esp_handler.py  web_handler.py
web/: package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: api.ts  stores.ts
web/src/lib/components/: Chart.svelte  MonitorCard.svelte  StatusBadge.svelte  Toast.svelte
web/src/routes/: +layout.svelte  +page.svelte
(+4 files in other folders)
